add controller and entity

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
 
+html{
+    height: 100%;
+}
 body {
     background: linear-gradient(to right, #0f2027, #203a43, #2c5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -8,3 +11,4 @@ h1{
 }
 
 @import "assets/scss/components/_navbar";
+@import "assets/scss/index";
