--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,14 +1,16 @@
-<ul class="nav flex-column">
+<ul class="nav justify-content-between">
     <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
+        <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link active" href="{{ path('portofolio') }}">Portofolio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link active" href="{{ path('index') }}">Quentin 'Rolls' Adadain</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link active" href="{{ path('job') }}">Compétence</a>
+    </li><li class="nav-item">
+        <a class="nav-link active" href="{{ path('formation') }}">Formation</a>
     </li>
 </ul>
