--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -3,7 +3,7 @@
         <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('portofolio') }}">Portofolio</a>
+        <a class="nav-link active" href="{{ path('portfolio') }}">Portflio</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="{{ path('index') }}">Quentin 'Rolls' Adadain</a>
