--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,16 +1,16 @@
 <ul class="nav justify-content-between">
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
+        <a class="nav-link active" href="#">Expérience</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('portfolio') }}">Portflio</a>
+        <a class="nav-link active" href="#">Portflio</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="{{ path('index') }}">Quentin 'Rolls' Adadain</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('job') }}">Compétence</a>
+        <a class="nav-link active" href="#">Compétence</a>
     </li><li class="nav-item">
-        <a class="nav-link active" href="{{ path('formation') }}">Formation</a>
+        <a class="nav-link active" href="#">Formation</a>
     </li>
 </ul>
