--- a/templates/job/index.html.twig
+++ b/templates/job/index.html.twig
@@ -1,20 +1,47 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello JobController!{% endblock %}
+{% block title %}Job index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Job index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Poste</th>
+                <th>TypeJob</th>
+                <th>Company</th>
+                <th>City</th>
+                <th>StartDate</th>
+                <th>EndDate</th>
+                <th>Description</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for job in jobs %}
+            <tr>
+                <td>{{ job.id }}</td>
+                <td>{{ job.poste }}</td>
+                <td>{{ job.typeJob }}</td>
+                <td>{{ job.company }}</td>
+                <td>{{ job.city }}</td>
+                <td>{{ job.startDate ? job.startDate|date('Y-m-d') : '' }}</td>
+                <td>{{ job.endDate ? job.endDate|date('Y-m-d') : '' }}</td>
+                <td>{{ job.description }}</td>
+                <td>
+                    <a href="{{ path('job_show', {'id': job.id}) }}">show</a>
+                    <a href="{{ path('job_edit', {'id': job.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="9">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/Rolls/Coding/QuentinAdadain/src/Controller/JobController.php'|file_link(0) }}">src/Controller/JobController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/Rolls/Coding/QuentinAdadain/templates/job/index.html.twig'|file_link(0) }}">templates/job/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('job_new') }}">Create new</a>
 {% endblock %}
