--- a/templates/portfolio/index.html.twig
+++ b/templates/portfolio/index.html.twig
@@ -1,20 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PortfolioController!{% endblock %}
+{% block title %}Portfolio index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Portfolio index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Image</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for portfolio in portfolios %}
+            <tr>
+                <td>{{ portfolio.id }}</td>
+                <td>{{ portfolio.name }}</td>
+                <td>{{ portfolio.description }}</td>
+                <td>{{ portfolio.image }}</td>
+                <td>
+                    <a href="{{ path('portfolio_show', {'id': portfolio.id}) }}">show</a>
+                    <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/Rolls/Coding/QuentinAdadain/src/Controller/PortfolioController.php'|file_link(0) }}">src/Controller/PortfolioController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/Rolls/Coding/QuentinAdadain/templates/portfolio/index.html.twig'|file_link(0) }}">templates/portfolio/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('portfolio_new') }}">Create new</a>
 {% endblock %}
