--- a/templates/job/index.html.twig
+++ b/templates/job/index.html.twig
@@ -10,11 +10,11 @@
             <tr>
                 <th>Id</th>
                 <th>Poste</th>
-                <th>TypeJob</th>
-                <th>Company</th>
-                <th>City</th>
-                <th>StartDate</th>
-                <th>EndDate</th>
+                <th>Type d'emploi</th>
+                <th>Entreprise</th>
+                <th>Ville</th>
+                <th>Début</th>
+                <th>Fin</th>
                 <th>Description</th>
                 <th>actions</th>
             </tr>
@@ -43,5 +43,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('job_new') }}">Create new</a>
+    <a href="{{ path('job_new') }}">Créer un nouveau Job</a>
 {% endblock %}
