--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,6 +1,6 @@
 <ul class="nav justify-content-between">
     <li class="nav-item">
-        <a class="nav-link active" href="#">Expérience</a>
+        <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="#">Portflio</a>
