Label and widget FormationType

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,5 +12,6 @@ h1{
 
 @import "assets/scss/components/_navbar";
 @import "assets/scss/content/job";
+@import "assets/scss/content/formation";
 @import "assets/scss/index";
 
