--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -11,6 +11,6 @@
     <li class="nav-item">
         <a class="nav-link active" href="#">Compétence</a>
     </li><li class="nav-item">
-        <a class="nav-link active" href="#">Formation</a>
+        <a class="nav-link active" href="{{ path('formation') }}">Formation</a>
     </li>
 </ul>
