--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -1,15 +1,18 @@
-<ul class="nav justify-content-between">
+<ul class="nav justify-content-around flex-column vh-100">
+    <div>
+    <img src="{{ asset('build/images/Portrait.png') }}" class="portrait-nav" alt="logo">
+    </div>
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
+        <a class="nav-link active" href="{{ path('index') }}">Quentin 'Rolls' Adadain</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="#">Portflio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" href="{{ path('index') }}">Quentin 'Rolls' Adadain</a>
+        <a class="nav-link active" href="{{ path('job') }}">Expérience</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" href="#">Compétence</a>
+        <a class="nav-link active" href="{{ path('skill') }}">Compétence</a>
     </li><li class="nav-item">
         <a class="nav-link active" href="{{ path('formation') }}">Formation</a>
     </li>
